src/components/datagrid/controls/_data_grid_column_sorting.scss
.euiDataGridColumnSorting__item {
  &-isDragging {
    @include euiBottomShadow;
    background: $euiColorEmptyShade;
  }
}

.euiDataGridColumnSorting__fieldList {
  @include euiYScrollWithShadows;
  padding-top: $euiSizeXS;
  padding-bottom: $euiSizeXS;
  max-height: 300px;
}

.euiDataGridColumnSorting__field {
  @include euiInteractiveStates;
  display: block;
  padding: $euiSizeXS $euiSizeS;
  width: 100%;
  outline-offset: -$euiFocusRingSize;
}

.euiDataGridColumnSorting__name {
  @include euiBreakpoint('xs', 's') {
    padding-right: $euiSizeXS;
  }
  padding-right: $euiSizeL;
}

.euiDataGridColumnSorting__order {
  @include euiBreakpoint('xs', 's') {
    min-width: unset;
  }
  min-width: 200px;

  .euiButtonGroup__buttons {
    border: none;
  }

  .euiButtonGroupButton {
    font-size: $euiFontSizeXS;
  }
}

